--- a/fotos.html
+++ b/fotos.html
@@ -2,7 +2,7 @@
 <HTML>
 <HEADER>
 <TITLE>FOTOS UWU</TITLE>
-<LINK REL="STYLESHEET" HREF="ESTILO.CSS">
+<LINK REL="STYLESHEET" HREF="style.css">
 </HEAD>
 <BODY>
 <HEADER>
