--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <HTML>
 <HEAD>
 <TITLE>FEMBOY</TITLE>
-<LINK REL="STYLESHEET"HREF="ESTILO.CSS">
+<LINK REL="STYLESHEET"HREF="style.css">
 </HEAD>
 <BODY>
 <HEADER>
