--- a/naza-gey.html
+++ b/naza-gey.html
@@ -2,7 +2,7 @@
 <HTML>
 <HEADER>
 <TITLE>NAZA GEY</TITLE>
-<LINK REL="STYLESHEET" HREF="ESTILO.CSS">
+<LINK REL="STYLESHEET" HREF="style.css">
 </HEAD>
 <BODY>
 <HEADER>
