--- a/rasones de por que a nazareno solas de gustan los femboy.html
+++ b/rasones de por que a nazareno solas de gustan los femboy.html
@@ -2,7 +2,7 @@
 <HTML>
 <HEADER>
 <TITLE>NAZA GEY</TITLE>
-<LINK REL="STYLESHEET" HREF="ESTILO.CSS">
+<LINK REL="STYLESHEET" HREF="style.css">
 </HEAD>
 <BODY>
 <HEADER>
