--- a/index.html
+++ b/index.html
@@ -1,26 +1,24 @@
-<!DOCTYPE HTML>
-<HTML>
-<HEAD>
-<TITLE>FEMBOY</TITLE>
-<LINK REL="STYLESHEET"HREF="style.css">
-</HEAD>
-<BODY>
-<HEADER>
-<NAV>
-<UL>
-<LI><A HREF="fotos.HTML">fotos</a></li>
-<LI><A HREF="naza-gey.HTML">naza-gey</A></LI>
-<LI><A HREF="RASONES DE POR QUE A NAZARENO SOLAS DE GUSTAN LOS FEMBOY.HTML">RASONES DE POR QUE A NAZARENO SOLAS DE GUSTAN LOS FEMBOY</A></LI>
-</UL>
-</NAV>
-</HEADER>
-<MAIN>
-<SECTION>
-<H1>♡FEMBOY♡</H1>
-<P><H1>PAGINA DE FEMBOY</H1>
-</P>
-</SECTION>
-</MAIN>
-</BODY>
-</HTML>
-
+<!DOCTYPE html>
+<html>
+<head>
+    <title>FEMBOY</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="fotos.html">fotos</a></li>
+                <li><a href="naza-gey.html">naza-gey</a></li>
+                <li><a href="rasones de por que a nazareno solas de gustan los femboy.html">Razones de por qué a Nazareno Solas le gustan los femboy</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h1>♡FEMBOY♡</h1>
+            <p><h1>Página de Femboy</h1></p>
+        </section>
+    </main>
+</body>
+</html>
