--- a/naza-gey.html
+++ b/naza-gey.html
@@ -1,30 +1,30 @@
-<!DOCTYPE HTML>
-<HTML>
-<HEADER>
-<TITLE>NAZA GEY</TITLE>
-<LINK REL="STYLESHEET" HREF="style.css">
-</HEAD>
-<BODY>
-<HEADER>
-<NAV>
-<UL>
-<LI><A HREF="index.HTML">INICIO</A></LI>
-</UL>
-</NAV>
-</HEADER>
-<MAIN>
-<SECTION CLASS="facu">
-<UL>
-<LI><IMG SRC="img/GEY 1.PNG" ALT="GEY 1"></LI>
-<LI><IMG SRC="img/GEY 2.PNG" ALT="GEY 2"></LI>
-<LI><IMG SRC="img/GEY 3.PNG" ALT="GEY 3"></LI>
-<LI><IMG SRC="img/GEY 4.PNG" ALT="GEY 4"></LI>
-<LI><IMG SRC="img/GEY 5.PNG" ALT="GEY 5"></LI>
-<LI><IMG SRC="img/GEY 6.PNG" ALT="GEY 6"></LI>
-<LI><IMG SRC="img/GEY 7.PNG" ALT="GEY 7"></LI>
-</UL>
-</SECTION>
-</MAIN>
-<SCRIPT SRC="SCRIPT.JS"></SCRIPT>
-</BODY>
-</HTML>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Naza Gey</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section class="facu">
+            <ul>
+                <li><img src="img/GEY 1.PNG" alt="GEY 1"></li>
+                <li><img src="img/GEY 2.PNG" alt="GEY 2"></li>
+                <li><img src="img/GEY 3.PNG" alt="GEY 3"></li>
+                <li><img src="img/GEY 4.PNG" alt="GEY 4"></li>
+                <li><img src="img/GEY 5.PNG" alt="GEY 5"></li>
+                <li><img src="img/GEY 6.PNG" alt="GEY 6"></li>
+                <li><img src="img/GEY 7.PNG" alt="GEY 7"></li>
+            </ul>
+        </section>
+    </main>
+    <script src="script.js"></script>
+</body>
+</html>
