--- a/rasones de por que a nazareno solas de gustan los femboy.html
+++ b/rasones de por que a nazareno solas de gustan los femboy.html
@@ -1,29 +1,29 @@
-<!DOCTYPE HTML>
-<HTML>
-<HEADER>
-<TITLE>NAZA GEY</TITLE>
-<LINK REL="STYLESHEET" HREF="style.css">
-</HEAD>
-<BODY>
-<HEADER>
-<NAV>
-<UL>
-<LI><A HREF="index.HTML">INICIO</A></LI>
-</UL>
-</NAV>
-</HEADER>
-<MAIN>
-<SECTION CLASS="PEPE">
-<UL>
-<LI><IMG SRC="img/naza1.PNG" ALT="naza1"></LI>
-<LI><IMG SRC="img/naza3.PNG" ALT="naza3"></LI>
-<LI><IMG SRC="img/naza4.PNG" ALT="naza4"></LI>
-<LI><IMG SRC="img/naza2.PNG" ALT="naza2"></LI>
-<LI><IMG SRC="img/naza5.PNG" ALT="naza5"></LI>
-<LI><IMG SRC="img/naza6.PNG" ALT="naza6"></LI>
-</UL>
-</SECTION>
-</MAIN>
-<SCRIPT SRC="SCRIPT.JS"></SCRIPT>
-</BODY>
-</HTML>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Naza Gey</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section class="PEPE">
+            <ul>
+                <li><img src="img/naza1.PNG" alt="naza1"></li>
+                <li><img src="img/naza3.PNG" alt="naza3"></li>
+                <li><img src="img/naza4.PNG" alt="naza4"></li>
+                <li><img src="img/naza2.PNG" alt="naza2"></li>
+                <li><img src="img/naza5.PNG" alt="naza5"></li>
+                <li><img src="img/naza6.PNG" alt="naza6"></li>
+            </ul>
+        </section>
+    </main>
+    <script src="script.js"></script>
+</body>
+</html>
