--- a/fotos.html
+++ b/fotos.html
@@ -1,44 +1,43 @@
-<!DOCTYPE HTML>
-<HTML>
-<HEADER>
-<TITLE>FOTOS UWU</TITLE>
-<LINK REL="STYLESHEET" HREF="style.css">
-</HEAD>
-<BODY>
-<HEADER>
-<NAV>
-<UL>
-<LI><A HREF="index.HTML">INICIO</A></LI>
-</UL>
-</NAV>
-</HEADER>
-<MAIN>
-<SECTION CLASS="GALERIA">
-<UL>
-<LI><IMG SRC="img/IMAGEN 1.PNG" ALT="IMAGEN 1"></LI>
-<LI><IMG SRC="img/IMAGEN 2.PNG" ALT="IMAGEN 2"></LI>
-<LI><IMG SRC="img/IMAGEN 3.PNG" ALT="IMAGEN 3"></LI>
-<LI><IMG SRC="img/IMAGEN 4.PNG" ALT="IMAGEN 4"></LI>
-<LI><IMG SRC="img/IMAGEN 5.PNG" ALT="IMAGEN 5"></LI>
-<LI><IMG SRC="img/IMAGEN 6.PNG" ALT="IMAGEN 6"></LI>
-<LI><IMG SRC="img/IMAGEN 7.PNG" ALT="IMAGEN 7"></LI>
-<LI><IMG SRC="img/IMAGEN 8.PNG" ALT="IMAGEN 8"></LI>
-<LI><IMG SRC="img/IMAGEN 9.PNG" ALT="IMAGEN 9"></LI>
-<LI><IMG SRC="img/IMAGEN 10.PNG" ALT="IMAGEN 10"></LI>
-<LI><IMG SRC="img/IMAGEN 11.PNG" ALT="IMAGEN 11"></LI>
-<LI><IMG SRC="img/IMAGEN 12.PNG" ALT="IMAGEN 12"></LI>
-<LI><IMG SRC="img/IMAGEN 13.PNG" ALT="IMAGEN 13"></LI>
-<LI><IMG SRC="img/IMAGEN 14.PNG" ALT="IMAGEN 14"></LI>
-<LI><IMG SRC="img/IMAGEN 15.PNG" ALT="IMAGEN 15"></LI>
-<LI><IMG SRC="img/IMAGEN 16.PNG" ALT="IMAGEN 16"></LI>
-<LI><IMG SRC="img/IMAGEN 17.PNG" ALT="IMAGEN 17"></LI>
-<LI><IMG SRC="img/IMAGEN 18.PNG" ALT="IMAGEN 18"></LI>
-<LI><IMG SRC="img/IMAGEN 19.PNG" ALT="IMAGEN 19"></LI>
-<LI><IMG SRC="img/IMAGEN 20.PNG" ALT="IMAGEN 20"></LI>
-</UL>
-</SECTION>
-</MAIN>
-<SCRIPT SRC="SCRIPT.JS"></SCRIPT
-</BODY>
-</HTML>
-
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Fotos UwU</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section class="GALERIA">
+            <ul>
+                <li><img src="img/IMAGEN 1.PNG" alt="IMAGEN 1"></li>
+                <li><img src="img/IMAGEN 2.PNG" alt="IMAGEN 2"></li>
+                <li><img src="img/IMAGEN 3.PNG" alt="IMAGEN 3"></li>
+                <li><img src="img/IMAGEN 4.PNG" alt="IMAGEN 4"></li>
+                <li><img src="img/IMAGEN 5.PNG" alt="IMAGEN 5"></li>
+                <li><img src="img/IMAGEN 6.PNG" alt="IMAGEN 6"></li>
+                <li><img src="img/IMAGEN 7.PNG" alt="IMAGEN 7"></li>
+                <li><img src="img/IMAGEN 8.PNG" alt="IMAGEN 8"></li>
+                <li><img src="img/IMAGEN 9.PNG" alt="IMAGEN 9"></li>
+                <li><img src="img/IMAGEN 10.PNG" alt="IMAGEN 10"></li>
+                <li><img src="img/IMAGEN 11.PNG" alt="IMAGEN 11"></li>
+                <li><img src="img/IMAGEN 12.PNG" alt="IMAGEN 12"></li>
+                <li><img src="img/IMAGEN 13.PNG" alt="IMAGEN 13"></li>
+                <li><img src="img/IMAGEN 14.PNG" alt="IMAGEN 14"></li>
+                <li><img src="img/IMAGEN 15.PNG" alt="IMAGEN 15"></li>
+                <li><img src="img/IMAGEN 16.PNG" alt="IMAGEN 16"></li>
+                <li><img src="img/IMAGEN 17.PNG" alt="IMAGEN 17"></li>
+                <li><img src="img/IMAGEN 18.PNG" alt="IMAGEN 18"></li>
+                <li><img src="img/IMAGEN 19.PNG" alt="IMAGEN 19"></li>
+                <li><img src="img/IMAGEN 20.PNG" alt="IMAGEN 20"></li>
+            </ul>
+        </section>
+    </main>
+    <script src="script.js"></script>
+</body>
+</html>
