--- a/naza-gey.html
+++ b/naza-gey.html
@@ -17,11 +17,11 @@
             <ul>
                 <li><img src="img/GEY 1.PNG" alt="GEY 1"></li>
                 <li><img src="img/GEY 2.PNG" alt="GEY 2"></li>
-                <li><img src="img/GEY 3.PNG" alt="GEY 3"></li>
-                <li><img src="img/GEY 4.PNG" alt="GEY 4"></li>
-                <li><img src="img/GEY 5.PNG" alt="GEY 5"></li>
-                <li><img src="img/GEY 6.PNG" alt="GEY 6"></li>
-                <li><img src="img/GEY 7.PNG" alt="GEY 7"></li>
+                <li><img src="img/gey 3.png" alt="GEY 3"></li>
+                <li><img src="img/gey 4.png" alt="GEY 4"></li>
+                <li><img src="img/gey 5.png" alt="GEY 5"></li>
+                <li><img src="img/gey 6.png" alt="GEY 6"></li>
+                <li><img src="img/gey 7.png" alt="GEY 7"></li>
             </ul>
         </section>
     </main>
