Update rasones de por que a nazareno solas de gustan los femboy.html

--- a/rasones de por que a nazareno solas de gustan los femboy.html
+++ b/rasones de por que a nazareno solas de gustan los femboy.html
@@ -15,12 +15,12 @@
     <main>
         <section class="PEPE">
             <ul>
-                <li><img src="img/naza1.png" alt="naza1"></li>
-                <li><img src="img/naza3.png" alt="naza3"></li>
-                <li><img src="img/naza4.png" alt="naza4"></li>
-                <li><img src="img/naza2.png" alt="naza2"></li>
-                <li><img src="img/naza5.png" alt="naza5"></li>
-                <li><img src="img/naza6.png" alt="naza6"></li>
+                <li><img src="img/naza1.PNG" alt="naza1" width="300"></li>
+                <li><img src="img/naza3.PNG" alt="naza3"width="300"></li>
+                <li><img src="img/naza4.PNG" alt="naza4"width="300"></li>
+                <li><img src="img/naza2.PNG" alt="naza2"width="300"></li>
+                <li><img src="img/naza5.PNG" alt="naza5"width="300"></li>
+                <li><img src="img/naza6.PNG" alt="naza6"width="300"></li>
             </ul>
         </section>
     </main>
